--- a/docker/nginx/app.conf
+++ b/docker/nginx/app.conf
@@ -7,7 +7,7 @@ server {
         proxy_pass http://api_service:8000;
     }
 
-    location ~ ^/(api/openapi|redoc)  {
+    location ~ ^/(redoc|docs)  {
         proxy_pass http://api_service:8000;
     }
 
